@@ -185,7 +185,7 @@ Krang.onload( function() {
 </tr>
 
 <tr<tmpl_if duplicate_url> class="err"<tmpl_else><tmpl_if error_media_file> class="err"</tmpl_if></tmpl_if>>
-<th>*<tmpl_lang Upload File></th>
+<th><tmpl_lang Upload File></th>
 <td colspan="2">
 <tmpl_if filename>
   <tmpl_lang Current File>
